# vhs-rs

./: .gitignore  Cargo.toml  README.md  agent-check-screen.txt  agent-check.txt  install.sh
.github/workflows/: ci.yml  release.yml
examples/: agent-check.tape  demo.tape  failure-demo.tape  readme.tape  repl-driver.sh  styling.tape  theme-gallery.tape  tui.tape
src/: artifacts.rs  cli.rs  cmd_render.rs  command.rs  error.rs  evaluator.rs  keys.rs  lexer.rs  lib.rs  main.rs  parser.rs  pty.rs  repl.rs  replay.rs  report.rs  resolve.rs  session.rs  snapshot.rs  term.rs  theme.rs  timeline.rs  token.rs  util.rs
src/encode/: cast.rs  gif.rs  png.rs  txt.rs
src/render/: chrome.rs  font.rs  grid.rs  renderer.rs
tests/: cli.rs  contract.rs  golden.rs  lexer_parser.rs  render.rs  repl.rs
tests/common/: mod.rs
tests/fixtures/golden/: colors.golden.txt  colors.tape  editing.golden.txt  editing.tape  unicode.golden.txt  unicode.tape
